--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,5 +1,5 @@
 {
-    "presets": ["@babel/preset-react","@babel/preset-env"],
+    "presets": ["@babel/preset-react","@babel/preset-env","env"],
     "env": {
       "development": {
         "presets": [["@babel/preset-react", { "development": true }]],
