--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,9 +1,7 @@
+
 {
-    "presets": ["@babel/preset-react","@babel/preset-env","env"],
-    "env": {
-      "development": {
-        "presets": [["@babel/preset-react", { "development": true }]],
-        "plugins": ["@babel/plugin-syntax-dynamic-import", "@babel/plugin-transform-modules-commonjs"]
-      }
-    }
-  }
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ]
+}
