--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "front-mugen",
   "version": "1.0.0",
-  "main": "./src/index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "babel src -d dist",
