--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "workbench.colorCustomizations": {
         "editorCursor.foreground": "#ffff00",
         "terminalCursor.foreground": "#e31414"
+        "test"
     }
 }
